# server

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  ROADMAP.md  SECURITY.md  biome.json  coauthoring_sessions.db  docker-compose.override.yml  docker-compose.services.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  services.Dockerfile  tsconfig.json  turbo.json  wo-x2t-plan.md
core/: .gitattributes  .gitignore  3DPARTY.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Readme.md  common.cmake  rust-toolchain.toml  vcpkg-configuration.json  vcpkg.json
core/.github/: CODEOWNERS
core/.github/workflows/: build-wasm.yml  build.yml  codeql.yaml
core/crates/: AGENTS.md
core/crates/eo-common/: Cargo.toml
core/crates/eo-common/src/: document.rs  error.rs  lib.rs  test_harness.rs
core/crates/eo-djvu/: Cargo.toml
core/crates/eo-djvu/src/: lib.rs  parser.rs
core/crates/eo-docx-renderer/: Cargo.toml
core/crates/eo-docx-renderer/src/: layout.rs  lib.rs  model.rs  pipeline.rs
core/crates/eo-epub/: Cargo.toml
core/crates/eo-epub/src/: lib.rs  model.rs  parser.rs
core/crates/eo-fb2/: Cargo.toml
core/crates/eo-fb2/src/: lib.rs  model.rs  parser.rs
core/crates/eo-fonts/: Cargo.toml
core/crates/eo-fonts/src/: lib.rs  loader.rs  model.rs
core/crates/eo-html/: Cargo.toml
core/crates/eo-html/src/: lib.rs  model.rs  parser.rs  serializer.rs
core/crates/eo-hwp/: Cargo.toml
core/crates/eo-hwp/src/: lib.rs  model.rs  parser.rs
core/crates/eo-msbinary/: Cargo.toml
core/crates/eo-msbinary/src/: detector.rs  lib.rs  model.rs
core/crates/eo-odf/: Cargo.toml
core/crates/eo-odf/src/: lib.rs  model.rs  parser.rs
core/crates/eo-ofd/: Cargo.toml
core/crates/eo-ofd/src/: lib.rs  model.rs  parser.rs
core/crates/eo-office-utils/: Cargo.toml
core/crates/eo-office-utils/src/: archive.rs  detect.rs  lib.rs
core/crates/eo-ooxml/: Cargo.toml
core/crates/eo-ooxml/src/: lib.rs  model.rs  parser.rs
core/crates/eo-pdf/: Cargo.toml
core/crates/eo-pdf/src/: lib.rs  model.rs  parser.rs
core/crates/eo-raster/: Cargo.toml
core/crates/eo-raster/src/: decoder.rs  encoder.rs  lib.rs  model.rs
core/crates/eo-renderer/: Cargo.toml
core/crates/eo-renderer/src/: canvas.rs  lib.rs  model.rs  path.rs
core/crates/eo-rtf/: Cargo.toml
core/crates/eo-rtf/src/: lib.rs  parser.rs  serializer.rs
core/crates/eo-txt/: Cargo.toml
core/crates/eo-txt/src/: bridge.rs  lib.rs  parser.rs  serializer.rs
core/crates/eo-unicode/: Cargo.toml
core/crates/eo-unicode/src/: converter.rs  lib.rs  normalizer.rs
core/crates/eo-x2t/: Cargo.toml
core/crates/eo-x2t/src/: lib.rs
core/crates/eo-xps/: Cargo.toml
core/crates/eo-xps/src/: lib.rs  parser.rs
core/crates/wo-common/: Cargo.toml
core/crates/wo-common/src/: document.rs  encoding.rs  error.rs  format.rs  lib.rs  test_harness.rs
core/crates/wo-djvu/: Cargo.toml
core/crates/wo-djvu/src/: lib.rs  model.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-docserver/: .dockerignore  Cargo.toml  Dockerfile
core/crates/wo-docserver/src/: config.rs  lib.rs  main.rs  static_files.rs  wopi.rs
core/crates/wo-docx-renderer/: Cargo.toml
core/crates/wo-docx-renderer/src/: layout.rs  lib.rs  pipeline.rs  roundtrip.rs
core/crates/wo-epub/: Cargo.toml
core/crates/wo-epub/src/: lib.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-fb2/: Cargo.toml
core/crates/wo-fb2/src/: lib.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-fonts/: Cargo.toml
core/crates/wo-fonts/src/: cache.rs  lib.rs  loader.rs  metrics.rs
core/crates/wo-html/: Cargo.toml
core/crates/wo-html/src/: lib.rs  parser.rs  roundtrip.rs
core/crates/wo-html/tests/: roundtrip_test.rs
core/crates/wo-hwp/: Cargo.toml
core/crates/wo-hwp/src/: lib.rs  model.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-msbinary/: Cargo.toml
core/crates/wo-msbinary/src/: lib.rs  ole.rs  roundtrip.rs
core/crates/wo-odf/: Cargo.toml
core/crates/wo-odf/src/: lib.rs  model.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-ofd/: Cargo.toml
core/crates/wo-ofd/src/: lib.rs  model.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-office-utils/: Cargo.toml
core/crates/wo-office-utils/src/: archive.rs  detect.rs  lib.rs
core/crates/wo-ooxml/: Cargo.toml
core/crates/wo-ooxml/src/: detector.rs  lib.rs  model.rs  parser.rs  roundtrip.rs  serializer.rs
core/crates/wo-pdf/: Cargo.toml
core/crates/wo-pdf/src/: lib.rs  model.rs  parser.rs  roundtrip.rs
core/crates/wo-raster/: Cargo.toml
core/crates/wo-raster/src/: lib.rs
core/crates/wo-renderer/: Cargo.toml
core/crates/wo-renderer-wasm/: Cargo.toml
core/crates/wo-renderer-wasm/src/: canvas_bridge.rs  lib.rs
core/crates/wo-renderer/src/: canvas.rs  color.rs  fonts.rs  gradient.rs  lib.rs  (+4 more)
core/crates/wo-rtf/: Cargo.toml
core/crates/wo-txt/: Cargo.toml
core/crates/wo-unicode/: Cargo.toml
core/crates/wo-webdav/: Cargo.toml
core/crates/wo-wopi/: Cargo.toml
core/crates/wo-x2t/: Cargo.toml
core/crates/wo-x2t-wasm/: Cargo.toml
core/crates/wo-xps/: Cargo.toml
core/wasm/: README.md
desktop/tauri-poc/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
services-enterprise/audit-service/: Cargo.toml
services-enterprise/audit-service/src/: main.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/coauthoring-service/: Cargo.toml
services/coauthoring-service/src/: main.rs
services/conversion-service/: Cargo.toml
services/conversion-service/src/: lib.rs  main.rs
services/conversion-service/tests/: integration_test.rs
services/mcp-server/: Cargo.toml
services/mcp-server/src/: client.rs  main.rs  snapshots.rs  tools.rs
services/session-service/: Cargo.toml
services/session-service/src/: main.rs
services/storage-service/: Cargo.toml
services/storage-service/src/: lib.rs  main.rs  repository.rs
services/storage-service/tests/: integration_test.rs
(+5573 files in other folders)
