[workspace]
resolver = "2"
members = [
    "core/crates/eo-common",
    "core/crates/eo-unicode",
    "core/crates/eo-txt",
    "core/crates/eo-fb2",
    "core/crates/eo-html",
    "core/crates/eo-xps",
    "core/crates/eo-ofd",
    "core/crates/eo-djvu",
    "core/crates/eo-epub",
    "core/crates/eo-office-utils",
    "core/crates/eo-rtf",
    "core/crates/eo-hwp",
    "core/crates/eo-pdf",
    "core/crates/eo-odf",
    "core/crates/eo-ooxml",
    "core/crates/eo-msbinary",
    "core/crates/eo-docx-renderer",
    "core/crates/eo-x2t",
    "core/crates/eo-renderer",
    "core/crates/eo-fonts",
    "core/crates/eo-raster",
    "core-enterprise/crates/eo-digital-signature",
    "core-enterprise/crates/eo-redaction",
    "core-enterprise/crates/eo-drm",
    "core-enterprise/crates/eo-watermark",
    "core-enterprise/crates/eo-comparison",
    "core-enterprise/crates/eo-converter-pro",
    "services/api-gateway",
    "services/conversion-service",
    "services/coauthoring-service",
    "services/storage-service",
    "services/session-service",
    "services/identity-service",
    "services-enterprise/audit-service",
    "services-enterprise/scim-service",
    "services-enterprise/webhook-service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/World-Office/server"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release.package."*"]
debug-assertions = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cxx = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
dirs = "6"
zip = "2"
flate2 = "1"
