[workspace]
resolver = "2"
members = [
    "core/crates/wo-common",
    "core/crates/wo-unicode",
    "core/crates/wo-txt",
    "core/crates/wo-fb2",
    "core/crates/wo-html",
    "core/crates/wo-xps",
    "core/crates/wo-ofd",
    "core/crates/wo-djvu",
    "core/crates/wo-epub",
    "core/crates/wo-office-utils",
    "core/crates/wo-rtf",
    "core/crates/wo-hwp",
    "core/crates/wo-pdf",
    "core/crates/wo-odf",
    "core/crates/wo-ooxml",
    "core/crates/wo-msbinary",
    "core/crates/wo-docx-renderer",
    "core/crates/wo-x2t",
    "core/crates/wo-renderer",
    "core/crates/wo-fonts",
    "core/crates/wo-raster",
    "core-enterprise/crates/wo-digital-signature",
    "core-enterprise/crates/wo-redaction",
    "core-enterprise/crates/wo-drm",
    "core-enterprise/crates/wo-watermark",
    "core-enterprise/crates/wo-comparison",
    "core-enterprise/crates/wo-converter-pro",
    "services/api-gateway",
    "services/conversion-service",
    "services/coauthoring-service",
    "services/storage-service",
    "services/session-service",
    "services/identity-service",
    "services/mcp-server",
    "services-enterprise/audit-service",
    "services-enterprise/scim-service",
    "services-enterprise/webhook-service",
    "core/crates/wo-wopi",
    "core/crates/wo-webdav",
    "core/crates/wo-x2t-wasm",
    "core/crates/wo-renderer-wasm",
    "core/crates/wo-docserver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/World-Office/server"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release.package."*"]
debug-assertions = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cxx = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
flate2 = "1"
encoding_rs = "0.8"
ttf-parser = "0.25"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "gif", "bmp"] }
unicode-normalization = "0.1"
urlencoding = "2"
hyper = { version = "1", features = ["full"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
async-trait = "0.1"
tempfile = "3"
tower = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "Document"] }
console_error_panic_hook = "0.1"
fontdb = { version = "0.16", default-features = false }
swash = "0.2"
rustybuzz = "0.20"
pdf-writer = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
diamond-types = "1"
