[workspace]
resolver = "2"
members = [
    "crates/eo-common",
    "crates/eo-unicode",
    "crates/eo-txt",
    "crates/eo-fb2",
    "crates/eo-html",
    "crates/eo-xps",
    "crates/eo-ofd",
    "crates/eo-djvu",
    "crates/eo-epub",
    "crates/eo-office-utils",
    "crates/eo-rtf",
    "crates/eo-hwp",
    "crates/eo-pdf",
    "crates/eo-odf",
    "crates/eo-ooxml",
    "crates/eo-msbinary",
    "crates/eo-docx-renderer",
    "crates/eo-x2t",
    "crates/eo-renderer",
    "crates/eo-fonts",
    "crates/eo-raster",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
flate2 = "1"
roxmltree = "0.20"
encoding_rs = "0.8"
ttf-parser = "0.25"
image = "0.25"
unicode-normalization = "0.1"
