[workspace]
resolver = "2"
members = [
    "crates/wo-common",
    "crates/wo-unicode",
    "crates/wo-txt",
    "crates/wo-fb2",
    "crates/wo-html",
    "crates/wo-xps",
    "crates/wo-ofd",
    "crates/wo-djvu",
    "crates/wo-epub",
    "crates/wo-office-utils",
    "crates/wo-rtf",
    "crates/wo-hwp",
    "crates/wo-pdf",
    "crates/wo-odf",
    "crates/wo-ooxml",
    "crates/wo-msbinary",
    "crates/wo-docx-renderer",
    "crates/wo-x2t",
    "crates/wo-renderer",
    "crates/wo-fonts",
    "crates/wo-raster",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
flate2 = "1"
roxmltree = "0.20"
encoding_rs = "0.8"
ttf-parser = "0.25"
image = "0.25"
unicode-normalization = "0.1"
