[workspace]
resolver = "2"
members = [
    "crates/wo-common",
    "crates/wo-unicode",
    "crates/wo-txt",
    "crates/wo-fb2",
    "crates/wo-html",
    "crates/wo-xps",
    "crates/wo-ofd",
    "crates/wo-djvu",
    "crates/wo-epub",
    "crates/wo-office-utils",
    "crates/wo-rtf",
    "crates/wo-hwp",
    "crates/wo-pdf",
    "crates/wo-odf",
    "crates/wo-ooxml",
    "crates/wo-msbinary",
    "crates/wo-docx-renderer",
    "crates/wo-x2t",
    "crates/wo-renderer",
    "crates/wo-fonts",
    "crates/wo-raster",
    "crates/wo-x2t-wasm",
    "crates/wo-renderer-wasm",
    "crates/wo-wopi",
    "crates/wo-webdav",
    "crates/wo-docserver",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
flate2 = "1"
roxmltree = "0.20"
encoding_rs = "0.8"
ttf-parser = "0.25"
image = "0.25"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "Document"] }
console_error_panic_hook = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tempfile = "3"
fontdb = { version = "0.16", default-features = false }
swash = "0.2"
rustybuzz = "0.20"
pdf-writer = "0.12"
