[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
http-body-util = "0.1"
bytes = "1"
