[package]
name = "coauthoring-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coauthoring-service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
diamond-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
