[package]
name = "conversion-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "conversion_service"
path = "src/lib.rs"

[[bin]]
name = "conversion-service"
path = "src/main.rs"

[dev-dependencies]
tower = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
wo-x2t = { path = "../../core/crates/wo-x2t" }
rusqlite = { workspace = true }
