[package]
name = "storage-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "storage-service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
