[package]
name = "storage-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "storage_service"
path = "src/lib.rs"

[[bin]]
name = "storage-service"
path = "src/main.rs"

[dev-dependencies]
bytes = "1"
tower = { workspace = true }
serde_json = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
rusqlite = { workspace = true }
