[package]
name = "eo-docx-renderer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
eo-common = { path = "../eo-common" }
eo-ooxml = { path = "../eo-ooxml" }
eo-renderer = { path = "../eo-renderer" }
serde = { workspace = true }
zip = { workspace = true }
