[package]
name = "eo-epub"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
eo-common = { path = "../eo-common" }
eo-office-utils = { path = "../eo-office-utils" }
serde = { workspace = true, features = ["derive"] }
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
