[package]
name = "eo-office-utils"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
eo-common = { path = "../eo-common" }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { workspace = true }
