[package]
name = "wo-docserver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "World-Office Document Server — serves editor UI and proxies WOPI requests to OCIS"

[[bin]]
name = "wo-docserver"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hyper = { workspace = true }
wo-x2t = { path = "../wo-x2t" }
wo-wopi = { path = "../wo-wopi" }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tower = { workspace = true }
