[package]
name = "wo-docx-renderer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
wo-common = { path = "../wo-common" }
wo-ooxml = { path = "../wo-ooxml" }
wo-renderer = { path = "../wo-renderer" }
serde = { workspace = true }
zip = { workspace = true }
