[package]
name = "wo-renderer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
fontdb = { workspace = true, features = ["fs"] }
swash = { workspace = true }
rustybuzz = { workspace = true }
wo-fonts = { path = "../wo-fonts" }
