[package]
name = "wo-webdav"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { workspace = true }
anyhow = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
async-trait = { workspace = true }
tower-http = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
