[package]
name = "wo-x2t-wasm"
version = "0.1.0"
edition = "2021"
authors = ["World-Office Contributors"]
description = "WASM bindings for World-Office format conversion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/World-Office"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wo-x2t = { path = "../wo-x2t" }
wo-common = { path = "../wo-common" }
console_error_panic_hook = { workspace = true, optional = true }

[features]
default = ["console_error_panic_hook"]
