[workspace]

[package]
name = "world-office-desktop"
version = "0.1.0"
edition = "2024"
description = "World Office — Desktop shell POC"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
mime_guess = "2"
dirs = "5"
tokio = { version = "1", features = ["fs"] }
walkdir = "2"
keyring = "3"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
